# django_hello_world

./: .gitignore  README.md  pyproject.toml
mysite/: requirements.txt
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: index.html
