[tool.poetry]
name = "django-getting-started"
version = "0.1.0"
description = "A Django project to get started with."
authors = ["b7nguyen@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.13"
Django = "^4.2.11"
asgiref = "^3.8.1"
sqlparse = "^0.4.4"
pydantic = "^2.7.1"
httpx = "^0.27.0"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"
certifi = "^2024.2.2"
idna = "^3.7"
pluggy = "^1.4.0"
packaging = "^24.0"
tomli = "^2.0.1"
tqdm = "^4.66.2"
typing_extensions = "^4.10.0"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
backports.zoneinfo = "^0.2.1"
distro = "^1.9.0"
exceptiongroup = "^1.2.0"
h11 = "^0.14.0"
httpcore = "^1.0.5"
iniconfig = "^2.0.0"
openai = "^1.23.6"
pydantic_core = "^2.18.2"
sniffio = "^1.3.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
